Add HTML / CSS skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,22 @@
     <script type="module" src="/src/index.js"></script>
 </head>
 <body>
-    
+
+    <div id="container">
+        <div id="searchBar">
+            <input type="search" name="searchBar" id="searchBar" placeholder="Enter City, State:" autocomplete>
+            <button id="searchBtn">Search</button>
+        </div>
+        <div id="weatherReport">
+        </div>
+
+    </div>
 </body>
 </html>
+
+<!-- 
+-Search bar that searchers for location
+	can use city or zipcode 
+-A div that shows the weather in the area 
+-A div that is the background to the forecast to change color or vibe 
+- -->
