--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,18 @@
 <body>
 
     <div id="container">
-        <div id="searchBar">
-            <input type="search" name="searchBar" id="searchBar" placeholder="Enter City, State:" autocomplete>
-            <button id="searchBtn">Search</button>
-        </div>
+
+ 
         <div id="weatherReport">
-            
+
+            <div id="formContainer">
+                
+                <div id="searchBar">
+                    <input type="search" name="searchBar" id="searchBar" placeholder="Enter City, State:" autocomplete>
+                    <button id="searchBtn">Search</button>
+                </div>
+            </div>
+
         </div>
 
     </div>
