--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
     <link rel="stylesheet" href="/src/styles.css">
     <script type="module" src="/src/index.js"></script>
 </head>
@@ -15,13 +15,21 @@
         <div id="weatherReport">
 
             <div id="formContainer">
-                
-                <div id="searchBar">
-                    <input type="search" name="searchBar" id="searchBar" placeholder="Enter City, State:" autocomplete>
-                    <button id="searchBtn">Search</button>
-                </div>
+                <form action="getData">
+                    <div id="searchBar">
+                        <label for="search" id="searchLabel">Enter Zipcode here:  </label>
+                        <input type="search" id="searchInput" placeholder="Enter Zipcode:" autocomplete required>
+                        <button id="searchBtn" type="submit">Search</button>
+                    </div>
+                </form>
             </div>
-
+            <div id="showWeather">
+                <p>weather data goes here</p>
+            </div>
+            <div id="backGroundVibe">
+                <p>weather vibe goes here or icon or whatever
+                </p>
+            </div>
         </div>
 
     </div>
