create table and did styling to table

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,23 @@
                 </form>
             </div>
             <div id="showWeather">
-                <p>weather data goes here</p>
+                    <Table>
+                        <tr id="headerRow">
+                            <th class="headerCell">Temp:</th>
+                            <th class="headerCell">Feels Like:</th>
+                            <th class="headerCell">Date / Time</th>
+                            <th class="headerCell">Description:</th>
+                            <th class="headerCell">Percipitation Type:</th>
+                        </tr>
+                        <tr id="dataRow">
+                            <td class="dataCell" id="tempData">50 degrees</td>
+                            <td class="dataCell"  id="feelsLikeData">Hot</td>
+                            <td class="dataCell"  id="dateTimeData">Now</td>
+                            <td class="dataCell"  id="descriptionData">It's so hot, stay inside</td>
+                            <td class="dataCell"  id="percipTypeData">Rain</td>
+                        </tr>
+                        
+                    </Table>
             </div>
             <div id="backGroundVibe">
                 <p>weather vibe goes here or icon or whatever
