--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
             <div id="formContainer">
                 <form action="getData" id="form">
                     <div id="searchBar">
-                        <label for="search" id="searchLabel">Enter Zipcode here:  </label>
-                        <input type="search" id="searchInput" placeholder="Enter Zipcode:" autocomplete required>
+                        <label for="search" id="searchLabel">Enter Zipcode:  </label>
+                        <input type="search" id="searchInput" placeholder="Zipcode:" autocomplete required>
                         <button id="searchBtn" type="submit">Search</button>
                     </div>
                 </form>
@@ -31,11 +31,11 @@
                                 <td class="dataCell" id="tempData"></td>
                             </tr>
                             <tr class="rows" id="feelsLikeRow">
-                                <th class="headerCell">Temp:</th>
+                                <th class="headerCell">Feels like:</th>
                                 <td class="dataCell"  id="feelsLikeData"></td>
                             </tr>
                             <tr class="rows" id="timeRow">
-                                <th class="headerCell">Time</th>
+                                <th class="headerCell">Time:</th>
                                 <td class="dataCell"  id="dateTimeData"></td>
                             </tr>
                             <tr class="rows" id="descriptionRow">
