add img elem || got weather icons

--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,7 @@
                     </Table>
             </div>
             <div id="backGroundVibe">
-                <p>weather vibe goes here or icon or whatever
-                </p>
+                <img id="weatherIcon">
             </div>
         </div>
 
