add css animation. width. classlits. and start and stop animation for weatherIcon

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                     </Table>
             </div>
             <div id="backGroundVibe">
-                <img id="weatherIcon">
+                <img class="weatherIcon" src="/src/icons/default.svg">
             </div>
         </div>
 
